# LedgerPro

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  README.md  SECURITY.md  Untitled  docker-compose.yml  requirements.txt  vercel.json
ledgerpro_backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  start_celery.sh  vercel.json
ledgerpro_backend/accounts/: admin.py  authentication.py  models.py  otp_helpers.py  rate_limit.py  services.py  tasks.py  urls.py  views.py
ledgerpro_backend/accounts/migrations/: 0001_initial.py  0002_otpverification_email_otpverification_purpose_and_more.py  0003_otpratelimitevent.py  0004_user_is_profile_complete_user_location_and_more.py
ledgerpro_backend/analytics/: models.py  urls.py  views.py
ledgerpro_backend/audit/: admin.py  models.py  services.py
ledgerpro_backend/audit/migrations/: 0001_initial.py  0002_firm_access_log.py
ledgerpro_backend/common/: upload_validation.py
ledgerpro_backend/eway_bills/: admin.py  models.py  tasks.py  urls.py  views.py
ledgerpro_backend/eway_bills/migrations/: 0001_initial.py  0002_ewaybillrecord_be_number_and_more.py
ledgerpro_backend/firms/: __init__.py  access.py  admin.py  models.py  permissions.py  urls.py  views.py
ledgerpro_backend/firms/migrations/: 0001_initial.py
ledgerpro_backend/invoices/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
ledgerpro_backend/invoices/migrations/: 0001_initial.py  0002_bill_extraction_failed_bill_extraction_raw_json_and_more.py  0003_alter_bill_status.py  0004_bill_is_deleted.py  (+1 more)
ledgerpro_backend/ledgerpro_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ledgerpro_backend/scripts/: test_cross_firm_access.py
ledgerpro_backend/trade_docs/: __init__.py  admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
ledgerpro_backend/vault/: __init__.py  admin.py  models.py  urls.py  views.py
(+52 files in other folders)
