[project]
name = "ledgerpro-backend"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    "migrations",
    "media",
    "staticfiles",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ledgerpro_backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = ["."]
testpaths = ["security/tests"]
