[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerpro-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15.0",
    "django-environ>=0.11.2",
    "psycopg2-binary>=2.9.9",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "django-cors-headers>=4.3.1",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "boto3>=1.34.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "python-dateutil>=2.9.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    "migrations",
    "media",
    "staticfiles",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ledgerpro_backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = ["."]
testpaths = ["security/tests"]

[tool.vercel]
# Prefer WSGI app object (avoids running manage.py before deps in some builders)
entrypoint = "ledgerpro_backend.wsgi:app"
